docs: adiciona docs para handlers
