# 7-APIs/1/internal/infra/webserver/handlers/user_handlers.go
@@ -11,6 +11,10 @@ import (
 	"github.com/guilchaves/treinamento-goexpert/6-APIs/1/internal/infra/database"
 )
 
+type Error struct {
+	Message string `json:"message"`
+}
+
 type UserHandler struct {
 	UserDB database.UserInterface
 }
@@ -23,6 +27,15 @@ func NewUserHandler(
 	}
 }
 
+// Create user godoc
+// @Summary					Get JWT
+// @Description			Get a JWT token 
+// @Tags						users
+// @Accept					json
+// @Produce					json
+// @Success					201
+// @Failure					500		{object}		Error
+// @Router					/users/generate_token		[post]
 func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
 	expiresIn := r.Context().Value("jwtExpiresIn").(int)
@@ -59,23 +72,40 @@ func (h *UserHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(accessToken)
 }
 
+// Create user godoc
+// @Summary					Create user
+// @Description			Create a new user
+// @Tags						users
+// @Accept					json
+// @Produce					json
+// @Param						request			body			dto.CreateUserInput		true	"user request"
+// @Success					201
+// @Failure					500					{object}		Error
+// @Router					/users			[post]
 func (h *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var user dto.CreateUserInput
 	err := json.NewDecoder(r.Body).Decode(&user)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 
 	u, err := entity.NewUser(user.Name, user.Email, user.Password)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
+
 		return
 	}
 
 	err = h.UserDB.Create(u)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
